--- a/tests/integration/targets/certificate/tasks/02_ssl_eof_error.yml
+++ b/tests/integration/targets/certificate/tasks/02_ssl_eof_error.yml
@@ -81,6 +81,7 @@
       community.crypto.get_certificate:
         host: "{{ sc_host | replace('https://','') | replace('http://','') }}"
         port: 443
+        asn1_base64: True
       delegate_to: localhost
       run_once: true
       register: uploaded_cert_info
